[package]

name = "readline"
version = "0.0.7"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>"]

description = "Wrapper around readline on Linux and Mac OS X, a shim on Windows"

documentation = "https://github.com/GBGamer/readline"
homepage = "https://github.com/GBGamer/readline"
repository = "https://github.com/GBGamer/readline"

readme = "README.md"

keywords = ["readline", "input"]

license = "MIT"

[dependencies]
readline-sys = "0.0.3"
