[package]

name = "readline"
version = "0.0.11"
authors = ["Nicholas Mazzuca <npmazzuca@gmail.com>"]

description = "Wrapper around readline on Linux and Mac OS X, a shim on Windows"

repository = "https://github.com/GBGamer/readline"

readme = "README.md"

keywords = ["readline", "input"]

license = "MIT"

[dependencies]
libc = "*"
readline-sys = "0.0.5"
