[package]

name = "readline"
version = "0.0.12"
authors = ["Nicole Mazzuca <npmazzuca@gmail.com>"]

description = "Wrapper around readline on Linux and Mac OS X, a shim on Windows"

repository = "https://github.com/ubsan/readline"
readme = "README.md"
keywords = ["readline", "input"]
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2.11"
readline-sys = "0.0.12"
